Added content to index.html

--- a/index.html
+++ b/index.html
@@ -13,14 +13,47 @@
   <body>
     <header>
       <nav>
+        <a href="index.html">Guitar Kings</a>
         <ul>
-          <li>Home</li>
-          <li>Guitars</li>
-          <li>Contact</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="guitars.html">Guitars</a></li>
+          <li><a href="contat.html">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+        <h1>Authentic Handmade Guitars</h1>
+        <p><a href="guitars.html">View Guitars</a></p>
+        <h2>Our Guitars Are:
+        </h2>
+        <p><ul>
+            <li>Made with real Pennsylvanian wood</li>
+            <li>Crafted by a family-run business</li>
+            <li>Built to last a lifetime</li>
+            <li>Beautiful unique sound</li>
+            <li>Options for all music lovers</li>
+        </ul></p>
+        <p>Hands strumming guitar</p>
+        <h2>Reviews</h2>
+        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Suspendisse quis dictum elit. In hac habitasse platea dictumst." - Bob Willis</p>
+        <p>Profile pic of Bob Willis</p>
+        <p>"Maecenas interdum, erat nec pulvinar, euismod, eros erat ornare mauris, commodo vestibulum odio nunc id urna. Sed volutpat consequat dolor, nec sollicitudin elit eleifend vitae." - Sally Oldfield</p>
+        <p>Profile pic of Sally Oldfield</p>
+        <h2>View Our Guitars</h2>
+        <p>Adirondack Red</p>
+        <h3>Adirondack Red</h3>
+        <p>$500</p>
+        <a href="guitars.html">View</a>
+        <br>Adirondack Red
+        <h3>Adirondack Red</h3>
+        <p>$500</p>
+        <a href="guitars.html">View</a>
+        <br>Adirondack Red
+        <h3>Adirondack Red</h3>
+        <p>$500</p>
+        <a href="guitars.html">View</a>
+        <br>Adirondack Red
+    </main>
     <footer></footer>
   </body>
 </html>
