Cleaned up code in index.html

--- a/index.html
+++ b/index.html
@@ -5,55 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="This is a page for purchasing our handmade guitars."
+      content="This is a page for purchasing Guitar King's handmade guitars."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guitar Kings</title>
+    <title>Guitar Kings | Home</title>
   </head>
   <body>
     <header>
+      <a href="index.html">Guitar Kings</a>
       <nav>
-        <a href="index.html">Guitar Kings</a>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="guitars.html">Guitars</a></li>
-          <li><a href="contat.html">Contact</a></li>
+          <li><a href="guitar.html">Guitars</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
+      <section>
+        <h1>Authentic Handmade Guitars</h1>
+        <a href="guitars.html">View Guitars</a>
+      </section>
     </header>
     <main>
-        <h1>Authentic Handmade Guitars</h1>
-        <p><a href="guitars.html">View Guitars</a></p>
-        <h2>Our Guitars Are:
-        </h2>
-        <p><ul>
+      <section>
+        <div>
+          <h2>Our Guitars Are:</h2>
+          <ul>
             <li>Made with real Pennsylvanian wood</li>
             <li>Crafted by a family-run business</li>
             <li>Built to last a lifetime</li>
             <li>Beautiful unique sound</li>
             <li>Options for all music lovers</li>
-        </ul></p>
-        <p>Hands strumming guitar</p>
+          </ul>
+        </div>
+        <img src="#" alt="Hand strumming guitar" />
+      </section>
+      <section>
         <h2>Reviews</h2>
-        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Suspendisse quis dictum elit. In hac habitasse platea dictumst." - Bob Willis</p>
-        <p>Profile pic of Bob Willis</p>
-        <p>"Maecenas interdum, erat nec pulvinar, euismod, eros erat ornare mauris, commodo vestibulum odio nunc id urna. Sed volutpat consequat dolor, nec sollicitudin elit eleifend vitae." - Sally Oldfield</p>
-        <p>Profile pic of Sally Oldfield</p>
+        <div>
+          <p>
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Suspendisse quis dictum elit. In hac habitasse platea dictumst." -
+            Bob Willis
+          </p>
+          <img src="#" alt="Profile pic of Bob Willis" />
+        </div>
+        <div>
+          <p>
+            "Maecenas interdum, erat nec pulvinar, euismod, eros erat ornare
+            mauris, commodo vestibulum odio nunc id urna. Sed volutpat consequat
+            dolor, nec sollicitudin elit eleifend vitae." - Sally Oldfield
+          </p>
+          <img src="#" alt="Profile pic of Sally Oldfield" />
+        </div>
+      </section>
+      <section>
         <h2>View Our Guitars</h2>
-        <p>Adirondack Red</p>
-        <h3>Adirondack Red</h3>
-        <p>$500</p>
-        <a href="guitars.html">View</a>
-        <br>Adirondack Red
-        <h3>Adirondack Red</h3>
-        <p>$500</p>
-        <a href="guitars.html">View</a>
-        <br>Adirondack Red
-        <h3>Adirondack Red</h3>
-        <p>$500</p>
-        <a href="guitars.html">View</a>
-        <br>Adirondack Red
+        <div>
+          <img src="#" alt="Aderondack Red" />
+          <h3>Aderondack Red</h3>
+          <p>$500</p>
+          <a href="#">View</a>
+        </div>
+        <div>
+          <img src="#" alt="Aderondack Red" />
+          <h3>Aderondack Red</h3>
+          <p>$500</p>
+          <a href="#">On sale</a>
+        </div>
+        <div>
+          <img src="#" alt="Aderondack Red" />
+          <h3>Aderondack Red</h3>
+          <p>$500</p>
+          <a href="#">View</a>
+        </div>
+        <div>
+          <img src="#" alt="Aderondack Red" />
+          <h3>Aderondack Red</h3>
+          <p>$500</p>
+          <a href="#">View</a>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>Copyright &copy;</footer>
   </body>
 </html>
