Fixed typos in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>Reviews</h2>
         <div>
           <p>
-            "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Suspendisse quis dictum elit. In hac habitasse platea dictumst." -
             Bob Willis
           </p>
@@ -51,7 +51,7 @@
         </div>
         <div>
           <p>
-            "Maecenas interdum, erat nec pulvinar, euismod, eros erat ornare
+            "Maecenas interdum, erat nec pulvinar euismod, eros erat ornare
             mauris, commodo vestibulum odio nunc id urna. Sed volutpat consequat
             dolor, nec sollicitudin elit eleifend vitae." - Sally Oldfield
           </p>
