Added images index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li>Options for all music lovers</li>
           </ul>
         </div>
-        <img src="#" alt="Hand strumming guitar" />
+        <img src="images/home-info.jpg" alt="Hand strumming guitar" />
       </section>
       <section>
         <h2>Reviews</h2>
@@ -47,7 +47,7 @@
             Suspendisse quis dictum elit. In hac habitasse platea dictumst." -
             Bob Willis
           </p>
-          <img src="#" alt="Profile pic of Bob Willis" />
+          <img src="images/review-bio.jpg" alt="Profile pic of Bob Willis" />
         </div>
         <div>
           <p>
@@ -55,31 +55,34 @@
             mauris, commodo vestibulum odio nunc id urna. Sed volutpat consequat
             dolor, nec sollicitudin elit eleifend vitae." - Sally Oldfield
           </p>
-          <img src="#" alt="Profile pic of Sally Oldfield" />
+          <img
+            src="images/review-bio2.jpg"
+            alt="Profile pic of Sally Oldfield"
+          />
         </div>
       </section>
       <section>
         <h2>View Our Guitars</h2>
         <div>
-          <img src="#" alt="Aderondack Red" />
+          <img src="images/product.jpg" alt="Aderondack Red" />
           <h3>Aderondack Red</h3>
           <p>$500</p>
           <a href="#">View</a>
         </div>
         <div>
-          <img src="#" alt="Aderondack Red" />
+          <img src="images/product.jpg" alt="Aderondack Red" />
           <h3>Aderondack Red</h3>
           <p>$500</p>
           <a href="#">On sale</a>
         </div>
         <div>
-          <img src="#" alt="Aderondack Red" />
+          <img src="images/product.jpg" alt="Aderondack Red" />
           <h3>Aderondack Red</h3>
           <p>$500</p>
           <a href="#">View</a>
         </div>
         <div>
-          <img src="#" alt="Aderondack Red" />
+          <img src="images/product.jpg" alt="Aderondack Red" />
           <h3>Aderondack Red</h3>
           <p>$500</p>
           <a href="#">View</a>
