--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="This is a page for purchasing Guitar King's handmade guitars."
-    />
+    <meta name="description" content="Contact page for Guitar Kings." />
     <title>Guitar Kings | Contact</title>
   </head>
   <body>
