Updated links on all pages

--- a/guitars.html
+++ b/guitars.html
@@ -28,25 +28,25 @@
           <img src="images/product.jpg" alt="Aderondack Red" />
           <h3>Aderondack Red</h3>
           <p>$500</p>
-          <a href="#">View</a>
+          <a href="products/adirondack-red.html">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Aderondack Red" />
           <h3>Aderondack Red</h3>
           <p>$500</p>
-          <a href="#">View</a>
+          <a href="products/adirondack-red.html">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Aderondack Red" />
           <h3>Aderondack Red</h3>
           <p>$500</p>
-          <a href="#">View</a>
+          <a href="products/adirondack-red.html">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Aderondack Red" />
           <h3>Aderondack Red</h3>
           <p>$500</p>
-          <a href="#">View</a>
+          <a href="products/adirondack-red.html">View</a>
         </div>
       </section>
     </main>
