Updated code according to answers in task 2

--- a/guitars.html
+++ b/guitars.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Purchase unique, handmade guitars from Guitar Kings"
+      content="View a list of guitars available from Guitar Kings"
     />
     <title>Guitar Kings | Products</title>
   </head>
@@ -22,29 +22,59 @@
       </nav>
     </header>
     <main>
+      <h1>Guitars</h1>
       <section>
-        <h1>Guitars</h1>
         <div>
-          <img src="images/product.jpg" alt="Aderondack Red" />
-          <h3>Aderondack Red</h3>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
           <p>$500</p>
           <a href="products/adirondack-red.html">View</a>
         </div>
         <div>
-          <img src="images/product.jpg" alt="Aderondack Red" />
-          <h3>Aderondack Red</h3>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
           <p>$500</p>
           <a href="products/adirondack-red.html">View</a>
         </div>
         <div>
-          <img src="images/product.jpg" alt="Aderondack Red" />
-          <h3>Aderondack Red</h3>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
           <p>$500</p>
           <a href="products/adirondack-red.html">View</a>
         </div>
         <div>
-          <img src="images/product.jpg" alt="Aderondack Red" />
-          <h3>Aderondack Red</h3>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
+          <p>$500</p>
+          <a href="products/adirondack-red.html">View</a>
+        </div>
+        <div>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
+          <p>$500</p>
+          <a href="products/adirondack-red.html">View</a>
+        </div>
+        <div>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
+          <p>$500</p>
+          <a href="products/adirondack-red.html">View</a>
+        </div>
+        <div>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
+          <p>$500</p>
+          <a href="products/adirondack-red.html">View</a>
+        </div>
+        <div>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
+          <p>$500</p>
+          <a href="products/adirondack-red.html">View</a>
+        </div>
+        <div>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
           <p>$500</p>
           <a href="products/adirondack-red.html">View</a>
         </div>
