--- a/products/adirondack-red.html
+++ b/products/adirondack-red.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="The handmade Aderondack Red from Guitar Kings"
+      content="View our most popular guitar - the Adironadack Red"
     />
-    <title>Guitar Kings | Aderondack Red</title>
+    <title>Guitar Kings | Adirondack Red</title>
   </head>
   <body>
     <header>
-      <a href="index.html">Guitar Kings</a>
+      <a href="../index.html">Guitar Kings</a>
       <nav>
         <ul>
           <li><a href="../index.html">Home</a></li>
@@ -22,7 +22,45 @@
       </nav>
     </header>
     <main>
-      <img src="../images/product.jpg" alt="Aderondack Red" />
+      <section>
+        <img src="../images/product.jpg" alt="Adirondack Red" />
+        <div>
+          <img
+            src="../images/product-specific.jpg"
+            alt="Playing the Adirondack Red"
+          />
+          <img
+            src="../images/product-specific.jpg"
+            alt="Playing the Adirondack Red"
+          />
+          <img
+            src="../images/product-specific.jpg"
+            alt="Playing the Adirondack Red"
+          />
+          <img
+            src="../images/product-specific.jpg"
+            alt="Playing the Adirondack Red"
+          />
+        </div>
+      </section>
+      <section>
+        <h1>Adirondack Red</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+          earum distinctio veritatis in incidunt labore rem voluptatum neque,
+          exercitationem itaque voluptates maiores soluta autem, odio debitis
+          placeat et expedita! Quia?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+          perferendis quisquam rem quis, voluptatum corporis facilis natus ad
+          hic, dolore sed doloribus maxime, libero magni ab molestias facere
+          sunt fugiat!
+        </p>
+        <p>$500</p>
+        <a href="../contact.html">Contact Us</a>
+      </section>
+      <h1>Adirondack Red</h1>
       <footer>Copyright &copy;</footer>
     </main>
   </body>
