--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contact page for Guitar Kings." />
+    <meta
+      name="description"
+      content="Contact Guitar Kings for amazing products you'll love."
+    />
     <title>Guitar Kings | Contact</title>
   </head>
   <body>
