--- a/index.html
+++ b/index.html
@@ -64,26 +64,26 @@
       <section>
         <h2>View Our Guitars</h2>
         <div>
-          <img src="images/product.jpg" alt="Aderondack Red" />
-          <h3>Aderondack Red</h3>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
           <p>$500</p>
           <a href="products/adirondack-red.html">View</a>
         </div>
         <div>
-          <img src="images/product.jpg" alt="Aderondack Red" />
-          <h3>Aderondack Red</h3>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
           <p>$500</p>
           <a href="products/adirondack-red.html">On sale</a>
         </div>
         <div>
-          <img src="images/product.jpg" alt="Aderondack Red" />
-          <h3>Aderondack Red</h3>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
           <p>$500</p>
           <a href="products/adirondack-red.html">View</a>
         </div>
         <div>
-          <img src="images/product.jpg" alt="Aderondack Red" />
-          <h3>Aderondack Red</h3>
+          <img src="images/product.jpg" alt="Adirondack Red" />
+          <h3>Adirondack Red</h3>
           <p>$500</p>
           <a href="products/adirondack-red.html">View</a>
         </div>
