Updated style according to answers in task 3

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
       name="description"
       content="Contact Guitar Kings for amazing products you'll love."
     />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Guitar Kings | Contact</title>
   </head>
   <body>
