--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="This is a page for purchasing Guitar King's handmade guitars."
     />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Guitar Kings | Home</title>
   </head>
   <body>
@@ -20,12 +21,12 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <section>
-        <h1>Authentic Handmade Guitars</h1>
-        <a href="guitars.html">View Guitars</a>
-      </section>
     </header>
     <main>
+      <section>
+        <h1>Authentic Handmade Guitars</h1>
+        <a href="guitars.html" class="cta">View Guitars</a>
+      </section>
       <section>
         <div>
           <h2>Our Guitars Are:</h2>
@@ -39,7 +40,7 @@
         </div>
         <img src="images/home-info.jpg" alt="Hand strumming guitar" />
       </section>
-      <section>
+      <section class="reviews">
         <h2>Reviews</h2>
         <div>
           <p>
@@ -61,31 +62,33 @@
           />
         </div>
       </section>
-      <section>
+      <section class="featured">
         <h2>View Our Guitars</h2>
-        <div>
+        <div class="featured--products">
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
-        <div>
+        <div class="featured--products">
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">On sale</a>
+          <a href="products/adirondack-red.html" class="cta cta-sale"
+            >On sale</a
+          >
         </div>
-        <div>
+        <div class="featured--products">
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
-        <div>
+        <div class="featured--products">
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
       </section>
     </main>
