--- a/products/adirondack-red.html
+++ b/products/adirondack-red.html
@@ -8,6 +8,7 @@
       name="description"
       content="View our most popular guitar - the Adironadack Red"
     />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
     <title>Guitar Kings | Adirondack Red</title>
   </head>
   <body>
@@ -58,9 +59,8 @@
           sunt fugiat!
         </p>
         <p>$500</p>
-        <a href="../contact.html">Contact Us</a>
+        <a href="../contact.html" class="cta">Contact Us</a>
       </section>
-      <h1>Adirondack Red</h1>
       <footer>Copyright &copy;</footer>
     </main>
   </body>
