--- a/guitars.html
+++ b/guitars.html
@@ -8,6 +8,7 @@
       name="description"
       content="View a list of guitars available from Guitar Kings"
     />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Guitar Kings | Products</title>
   </head>
   <body>
@@ -28,55 +29,55 @@
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
         <div>
           <img src="images/product.jpg" alt="Adirondack Red" />
           <h3>Adirondack Red</h3>
           <p>$500</p>
-          <a href="products/adirondack-red.html">View</a>
+          <a href="products/adirondack-red.html" class="cta">View</a>
         </div>
       </section>
     </main>
