--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
       name="description"
       content="This is a page for purchasing Guitar King's handmade guitars."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Guitar Kings | Home</title>
   </head>
   <body>
     <header>
-      <a href="index.html">Guitar Kings</a>
+      <a href="index.html" class="logo">Guitar Kings</a>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
