--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="welcome">
         <h1>Authentic Handmade Guitars</h1>
         <a href="guitars.html" class="cta">View Guitars</a>
       </section>
-      <section>
+      <section class="selling-points">
         <div>
           <h2>Our Guitars Are:</h2>
           <ul>
@@ -44,7 +44,11 @@
             <li>Options for all music lovers</li>
           </ul>
         </div>
-        <img src="images/home-info.jpg" alt="Hand strumming guitar" />
+        <img
+          src="images/home-info.jpg"
+          class="selling-points_images"
+          alt="Hand strumming guitar"
+        />
       </section>
       <section class="reviews">
         <h2>Reviews</h2>
@@ -54,7 +58,11 @@
             Suspendisse quis dictum elit. In hac habitasse platea dictumst." -
             Bob Willis
           </p>
-          <img src="images/review-bio.jpg" alt="Profile pic of Bob Willis" />
+          <img
+            src="images/review-bio.jpg"
+            class="reviews_images"
+            alt="Profile pic of Bob Willis"
+          />
         </div>
         <div>
           <p>
@@ -64,6 +72,7 @@
           </p>
           <img
             src="images/review-bio2.jpg"
+            class="reviews_images"
             alt="Profile pic of Sally Oldfield"
           />
         </div>
