Updated content and style according to task

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,25 @@
     <main>
       <section>
         <h1>Contact</h1>
+        <div>
+          <form>
+            <label for="full-name">Full name</label>
+            <input type="text" id="full-name" name="full-name" />
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" />
+            <label for="guitar">Guitar</label>
+            <select id="guitar" name="guitar">
+              <option value="Adirondack Red">Adirondack Red</option>
+              <option value="Adirondack Blue">Adirondack Blue</option>
+              <option value="Adirondack Green">Adirondack Green</option>
+            </select>
+            <input type="checkbox" id="signup" />
+            <label for="signup">Sign up for email updates.</label>
+            <label for="message">Message</label>
+            <textarea id="message" name="message"></textarea>
+            <input type="submit" value="Send now" class="cta" />
+          </form>
+        </div>
       </section>
     </main>
     <footer>Copyright &copy;</footer>
