--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="guitars.html">Guitars</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="active-page">Contact</a></li>
         </ul>
       </nav>
     </header>
