--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="index.html" class="logo">Guitar Kings</a>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="active-page">Home</a></li>
           <li><a href="guitars.html">Guitars</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
