--- a/products/adirondack-red.html
+++ b/products/adirondack-red.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="../guitars.html">Guitars</a></li>
+          <li><a href="../guitars.html" class="active-page">Guitars</a></li>
           <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav>
