--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
     </header>
     <main>
       <section class="welcome">
-        <h1>Authentic Handmade Guitars</h1>
-        <a href="guitars.html" class="cta">View Guitars</a>
+        <div class="welcome_content">
+          <h1>Authentic Handmade Guitars</h1>
+          <a href="guitars.html" class="cta">View Guitars</a>
+        </div>
       </section>
       <section class="selling-points">
-        <div>
+        <div class="selling-points-child">
           <h2>Our Guitars Are:</h2>
           <ul>
             <li>Made with real Pennsylvanian wood</li>
@@ -44,37 +46,42 @@
             <li>Options for all music lovers</li>
           </ul>
         </div>
-        <img
-          src="images/home-info.jpg"
-          class="selling-points_images"
-          alt="Hand strumming guitar"
-        />
+        <figure>
+          <img
+            src="images/home-info.jpg"
+            class="selling-points_images"
+            alt="Hand strumming guitar"
+          />
+        </figure>
       </section>
       <section class="reviews">
         <h2>Reviews</h2>
-        <div>
-          <p>
-            "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Suspendisse quis dictum elit. In hac habitasse platea dictumst." -
-            Bob Willis
-          </p>
-          <img
-            src="images/review-bio.jpg"
-            class="reviews_images"
-            alt="Profile pic of Bob Willis"
-          />
-        </div>
-        <div>
-          <p>
-            "Maecenas interdum, erat nec pulvinar euismod, eros erat ornare
-            mauris, commodo vestibulum odio nunc id urna. Sed volutpat consequat
-            dolor, nec sollicitudin elit eleifend vitae." - Sally Oldfield
-          </p>
-          <img
-            src="images/review-bio2.jpg"
-            class="reviews_images"
-            alt="Profile pic of Sally Oldfield"
-          />
+        <div class="reviews_content">
+          <div>
+            <p>
+              "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Suspendisse quis dictum elit. In hac habitasse platea dictumst."
+              <span class="reviews_name"> - Bob Willis</span>
+            </p>
+            <img
+              src="images/review-bio.jpg"
+              class="reviews_images"
+              alt="Profile pic of Bob Willis"
+            />
+          </div>
+          <div>
+            <p>
+              "Maecenas interdum, erat nec pulvinar euismod, eros erat ornare
+              mauris, commodo vestibulum odio nunc id urna. Sed volutpat
+              consequat dolor, nec sollicitudin elit eleifend vitae."
+              <span class="reviews_name">- Sally Oldfield</span>
+            </p>
+            <img
+              src="images/review-bio2.jpg"
+              class="reviews_images"
+              alt="Profile pic of Sally Oldfield"
+            />
+          </div>
         </div>
       </section>
       <section class="featured">
