--- a/products/adirondack-red.html
+++ b/products/adirondack-red.html
@@ -22,29 +22,45 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="product-specific">
       <section>
-        <img src="../images/product.jpg" alt="Adirondack Red" />
-        <div>
-          <img
-            src="../images/product-specific.jpg"
-            alt="Playing the Adirondack Red"
-          />
-          <img
-            src="../images/product-specific.jpg"
-            alt="Playing the Adirondack Red"
-          />
-          <img
-            src="../images/product-specific.jpg"
-            alt="Playing the Adirondack Red"
-          />
-          <img
-            src="../images/product-specific.jpg"
-            alt="Playing the Adirondack Red"
-          />
+        <img
+          src="../images/product.jpg"
+          alt="Adirondack Red"
+          class="product-image"
+        />
+        <div class="product-image_thumbnails">
+          <div>
+            <img
+              src="../images/product-specific.jpg"
+              class="product-image"
+              alt="Playing the Adirondack Red"
+            />
+          </div>
+          <div>
+            <img
+              src="../images/product-specific.jpg"
+              class="product-image"
+              alt="Playing the Adirondack Red"
+            />
+          </div>
+          <div>
+            <img
+              src="../images/product-specific.jpg"
+              class="product-image"
+              alt="Playing the Adirondack Red"
+            />
+          </div>
+          <div>
+            <img
+              src="../images/product-specific.jpg"
+              class="product-image"
+              alt="Playing the Adirondack Red"
+            />
+          </div>
         </div>
       </section>
-      <section>
+      <section class="product-specific_details">
         <h1>Adirondack Red</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
@@ -58,10 +74,10 @@
           hic, dolore sed doloribus maxime, libero magni ab molestias facere
           sunt fugiat!
         </p>
-        <p>$500</p>
+        <p class="product-specific_price">$500</p>
         <a href="../contact.html" class="cta">Contact Us</a>
       </section>
-      <footer>Copyright &copy;</footer>
     </main>
+    <footer>Copyright &copy;</footer>
   </body>
 </html>
